syntax = "proto3";
package backend;

option go_package = "backend";

import "github.com/baudtime/baudtime/msg/pb/pb.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

enum MatchType {
    MatchEqual = 0;
    MatchNotEqual = 1;
    MatchRegexp = 2;
    MatchNotRegexp = 3;
}

message Matcher {
    MatchType Type = 1;
    string Name = 2;
    string Value = 3;
}

message SelectRequest {
    sint64 mint = 1;
    sint64 maxt = 2;
    sint64 interval = 3;
    repeated Matcher matchers = 4;
    bytes spanCtx = 5;
}

message SelectResponse {
    pb.StatusCode status = 1;
    repeated pb.Series series = 2;
    string errorMsg = 3;
}

message AddRequest {
    repeated pb.Series series = 1;
}

message LabelValuesRequest {
    string name = 1;
    repeated Matcher matchers = 2;
    bytes spanCtx = 3;
}
